--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -12,17 +12,17 @@
 
 
         <!-- Bootstrap core CSS -->
-        <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+        <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+        <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
     </head>
 
     <body>
 
         <!-- Navigation -->
-        <div th:include="administrador/template_admin.html::header">
+        <div th:insert="~{administrador/template_admin.html::header}">
             
         </div>
 
@@ -92,13 +92,13 @@
         <!-- /.container -->
 
         <!-- Footer -->
-        <div th:include="administrador/template_admin.html::footer">
+        <div th:insert="~{administrador/template_admin.html::footer}">
             
         </div>
 
         <!-- Bootstrap core JavaScript -->
-        <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     </body>
 
