--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -27,7 +27,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Spring eCommerce</a>
+                    <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
 
                     <form class="form-inline my-2 my-lg-0" method="post"
                           action="#">
@@ -43,18 +43,23 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link"
-                                                    href="carrito.html">Carrito</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                                    href="login.html">Login</a></li>
+                            <li class="nav-item dropdown"><a
+                                    class="nav-link dropdown-toggle" href="#"
+                                    id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false"> ADMIN </a>
+
+                                <div class="dropdown-menu"
+                                     aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" th:href="@{/productos}">Productos</a> 
+                                </div></li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
 
-        
-            <!-- Footer -->
+
+        <!-- Footer -->
         <div th:fragment="footer">
             <footer class="py-5 bg-dark">
                 <div class="container">
@@ -63,10 +68,10 @@
                 <!-- /.container -->
             </footer>
         </div>
-            <!-- Bootstrap core JavaScript -->
-            <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-            <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-        
+        <!-- Bootstrap core JavaScript -->
+        <script th:src="@{vendor/jquery/jquery.min.js}"></script>
+        <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
     </body>
 
 </html>
