--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -12,17 +12,17 @@
 
 
         <!-- Bootstrap core CSS -->
-        <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+        <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+        <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
     </head>
 
     <body>
 
         <!-- Navigation -->
-        <div th:include="administrador/template_admin.html::header">
+        <div th:insert="~{administrador/template_admin.html::header}">
             
         </div>
 
@@ -40,7 +40,7 @@
                 <li class="breadcrumb-item active">Ver Productos</li>
             </ol>
 
-            <a class="btn btn-primary" href="#" > Crear Producto</a>
+            <a class="btn btn-primary" th:href="@{/productos/create}" > Crear Producto</a>
             <h2>Productos</h2>
             <table class="table">
                 <thead>
@@ -54,12 +54,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td ></td>
-                        <td ></td>
-                        <td ></td>
-                        <td ></td>
-                        <td><a  class="btn btn-warning" href="">Editar</a> </td>
+                    <tr th:each="prod : ${productos}">
+                        <td th:text="${prod.nombre}"></td>
+                        <td th:text="${prod.descripcion}"></td>
+                        <td th:text="${prod.cantidad}"></td>
+                        <td th:text="${prod.precio}"></td>
+                        <td><a  class="btn btn-warning" th:href="@{/productos/edit/{id} (id=${prod.id})}">Editar</a> </td>
                         <td><a  class="btn btn-danger" href="">Eliminar</a> </td>
                     </tr>       
                 </tbody>
@@ -69,13 +69,13 @@
         <!-- /.container -->
 
         <!-- Footer -->
-        <div th:include="administrador/template_admin.html::footer">
+        <div th:insert="~{administrador/template_admin.html::footer}">
             
         </div>
 
         <!-- Bootstrap core JavaScript -->
-        <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     </body>
  
