--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -12,10 +12,10 @@
 
 
         <!-- Bootstrap core CSS -->
-        <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+        <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link th:href="@{css/heroic-features.css}" rel="stylesheet">
+        <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
     </head>
 
@@ -23,11 +23,9 @@
 
         <!-- Navigation -->
         <div th:fragment="header">
-
-
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
+                    <a class="navbar-brand" href="#">Spring eCommerce</a>
 
                     <form class="form-inline my-2 my-lg-0" method="post"
                           action="#">
@@ -43,19 +41,15 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item dropdown"><a
-                                    class="nav-link dropdown-toggle" href="#"
-                                    id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false"> ADMIN </a>
-
-                                <div class="dropdown-menu"
-                                     aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" th:href="@{/productos}">Productos</a> 
-                                </div></li>
+                            <li class="nav-item"><a class="nav-link"
+                                                    href="carrito.html">Carrito</a></li>
+                            <li class="nav-item"><a class="nav-link"
+                                                    href="login.html">Login</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
+
         </div>
 
 
@@ -63,14 +57,14 @@
         <div th:fragment="footer">
             <footer class="py-5 bg-dark">
                 <div class="container">
-                    <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2023</p>
+                    <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
                 </div>
                 <!-- /.container -->
             </footer>
         </div>
         <!-- Bootstrap core JavaScript -->
-        <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-        <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+        <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     </body>
 
