--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -36,57 +36,46 @@
 
             <!-- Page Heading/Breadcrumbs -->
             <h1 class="mt-4 mb-3">
-                Spring eCommerce <small>Carrito</small>
+                Spring eCommerce <small>Compras</small>
             </h1>
 
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                <li class="breadcrumb-item active">Carrito</li>
+                <li class="breadcrumb-item active">Compras</li>
             </ol>
 
             <!-- Blog Post -->
             <div class="card mb-4">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-12">
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th scope="col">Producto</th>
-                                        <th scope="col">Precio</th>
-                                        <th scope="col">Cantidad</th>
-                                        <th scope="col">Total</th>
+                                        <th scope="col">No. de Orden</th>
+                                        <th scope="col">Fecha</th>
+                                        <th scope="col">Valor</th>
                                         <th scope="col">Acción</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="ordn : ${cart}">
-                                        <td th:text="${ordn.nombre}"></td>
-                                        <td th:text="${ordn.precio}"></td>
-                                        <td th:text="${ordn.cantidad}"></td>
-                                        <td th:text="${ordn.total}"></td>
-                                        <td><a th:href="@{/delete/cart/{id} (id = ${ordn.producto.id})}" class="btn btn-danger">Quitar</a></td>
+                                    <tr th:each="ord : ${ordenes}">
+                                        <td th:text="${ord.numero}"></td>
+                                        <td th:text="${ord.fechaCreacion}"></td>
+                                        <td th:text="${ord.total}"></td>
+                                        <td><a th:href="@{/usuario/detalle/{id} (id = ${ord.id})}" class="btn btn-success">Ver Detalle</a></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-
-                        <div class="col-lg-3">
-                            <h2 class="card-title">SUBTOTAL</h2>
-
-                            <ul class="list-group">
-                                <li class="list-group-item"><h5 th:text="'Total: ' + ${orden.total}"></h5></li>
-                                <a th:href="@{/order}" class="btn btn-dark">Ver Orden</a>
-                            </ul>
-                        </div>
-
                     </div>
                 </div>
             </div>
-            <!-- /.container -->
+        </div>
+        <!-- /.container -->
 
-            <!-- Footer -->
-            <div th:insert="~{usuario/template_usuario.html::footer}">
+        <!-- Footer -->
+        <div th:insert="~{usuario/template_usuario.html::footer}">
 
             </div>
 
