--- a/src/main/resources/templates/administrador/detalleOrden.html
+++ b/src/main/resources/templates/administrador/detalleOrden.html
@@ -23,8 +23,9 @@
 
         <!-- Navigation -->
         <div th:insert="~{administrador/template_admin.html::header}">
-            
+
         </div>
+
 
         <!-- Page Content -->
         <div class="container">
@@ -32,12 +33,13 @@
 
             <!-- Page Heading/Breadcrumbs -->
             <h1 class="mt-4 mb-3">
-                Spring eCommerce <small>Ordenes</small>
+                Spring eCommerce <small>Detalles</small>
             </h1>
 
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
-                <li class="breadcrumb-item active">Ordenes</li>
+                <li class="breadcrumb-item"><a th:href="@{/administrador/ordenes}">Ordenes</a></li>
+                <li class="breadcrumb-item active">Detalle de la Orden</li>
             </ol>
 
             <!-- Blog Post -->
@@ -48,18 +50,18 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th scope="col">No. de Orden</th>
-                                        <th scope="col">Fecha</th>
-                                        <th scope="col">Valor</th>
-                                        <th scope="col">Acción</th>
+                                        <th scope="col">Cantidad</th>
+                                        <th scope="col">Producto</th>                  
+                                        <th scope="col">Precio</th>
+                                        <th scope="col">Total</th>                  
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="ord : ${ordenes}">
-                                        <td th:text="${ord.numero}"></td>
-                                        <td th:text="${ord.fechaCreacion}"></td>
-                                        <td th:text="${ord.total}"></td>
-                                        <td><a th:href="@{/administrador/detalle/{id} (id = ${ord.id})}" class="btn btn-success">Ver Detalle</a></td>
+                                    <tr th:each="detalle : ${detalles}">
+                                        <td th:text="${detalle.cantidad}"></td>
+                                        <td th:text="${detalle.nombre}"></td>
+                                        <td th:text="${detalle.precio}"></td>
+                                        <td th:text="${detalle.total}"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -82,3 +84,4 @@
     </body>
 
 </html>
+
