--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -22,8 +22,12 @@
     <body>
 
         <!-- Navigation -->
-        <div th:insert="~{usuario/template_usuario.html::header}">
-
+        <div th:insert="~{usuario/template_usuario.html::header}" th:if="${sesion == null}">
+            
+        </div>
+        
+        <div th:insert="~{usuario/template_usuario.html::header-user}" th:unless="${sesion == null}">
+            
         </div>
 
         <!-- Page Content -->
